--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio",
+  "homepage": "https://shen101s.github.io/my-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
